// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useRoutingProps() > path prop has priority over path option 1`] = `
<body>
  <div>
    <div>
      {"path":"/path-prop","prop1":"1","prop2":"2","routing":"path"}
    </div>
  </div>
</body>
`;

exports[`useRoutingProps() > the path option is ignored when "hash" routing prop 1`] = `
<body>
  <div>
    <div>
      {"routing":"hash","prop1":"1","prop2":"2"}
    </div>
  </div>
</body>
`;

exports[`useRoutingProps() > the path option is ignored when "virtual" routing prop 1`] = `
<body>
  <div>
    <div>
      {"routing":"virtual","prop1":"1","prop2":"2"}
    </div>
  </div>
</body>
`;
